--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ google-generativeai==0.7.2
 googleapis-common-protos==1.63.2
 grpcio==1.65.5
 grpcio-status==1.62.3
+gunicorn==23.0.0
 httplib2==0.22.0
 idna==3.7
 Jinja2==3.1.4
